--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -1,6 +1,45 @@
 {
     "_version": "1.65.0",
     "sap.app": {
-        "id": "ui5.tutorial"
+        "id": "ui5.tutorial",
+        "i18n": "i18n/i18n.properties",
+        "title":"{{appTitle}}",
+        "description":"{{appDescription}}",
+        "type": "application",
+        "applicationVersion": {
+            "version": "1.0.0"
+        }
+    },
+    "sap.ui": {
+        "technology": "UI5",
+        "deviceTypes":{
+            "desktop": true,
+            "tablet": true,
+            "phone": true
+        }
+    },
+    "sap.ui5":{
+        "dependencies": {
+            "minUI5Version":"1.108.0",
+            "libs": {
+                "sap.ui.core":{},
+                "sap.m":{}
+            }
+        },
+        "models": {
+            "i18n":{
+                "type": "sap.ui.model.resource.ResourceModel",
+                "settings": {
+                    "bundleName": "ui5.tutorial.i18n.i18n",
+                    "supportedLocales": [""],
+                    "fallbackLocale": ""
+                }
+            }
+        },
+        "rootView":{
+            "viewName": "ui5.tutorial.view.App",
+            "type": "XML",
+            "id": "app"
+        }
     }
 }
