Step 30: Routing e Navegação

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -52,6 +52,38 @@
             "viewName": "ui5.tutorial.view.App",
             "type": "XML",
             "id": "app"
+        },
+        "routing": {
+            "config":{
+                "routerClass": "sap.m.routing.Router",
+                "type": "View",
+                "viewType": "XML",
+                "path": "ui5.tutorial.view",
+                "controlId": "app",
+                "controlAggregation": "pages"
+            },
+            "routes":[
+                {
+                    "pattern": "",
+                    "name": "overview",
+                    "target":"overview"
+                },
+                {
+                    "pattern": "'detail",
+                    "name": "detail",
+                    "target":"detail"
+                }
+            ],
+            "targets": {
+                "overview":{
+                    "id": "overview",
+                    "name": "Overview"
+                },
+                "detail":{
+                    "id": "detail",
+                    "name": "Detail"
+                }
+            }
         }
     }
 }
